force-app/main/default/objects/Batch_Approval__c/Batch_Approval__c.object-meta.xml
<CustomObject>
    <label>Batch Approval</label>
    <nameField>
        <displayFormat>B-{MMDDYYYY}-{000}</displayFormat>
        <label>Batch Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>