force-app/main/default/objects/Batch_Approval__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Advance Approvals</relationshipLabel>
    <relationshipName>Advance_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>