force-app/main/default/objects/Batch_Approval__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>if(Number_of_Rejected__c &gt; 0, &apos;Rejected&apos;, 
 if(or(Number_of_Approved__c =  Required_Number_of_Approvers__c ,Total_Approvers__c = Number_of_Approved__c), &apos;Approved&apos;, 
 if(Number_of_Approved__c &gt; 0, &apos;Pending&apos;, &apos;Submitted&apos;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>