force-app/main/default/objects/Batch_Approval__c/fields/AttachmentPosted__c.field-meta.xml
<CustomField>
    <fullName>AttachmentPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>use this as a trigger to send approval emails when the CSV file is attached</description>
    <label>AttachmentPosted</label>
    <type>Checkbox</type>
</CustomField>