force-app/main/default/objects/Batch_Approval__c/fields/Initial_Comments__c.field-meta.xml
<CustomField>
    <fullName>Initial_Comments__c</fullName>
    <label>Initial Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>