force-app/main/default/objects/Batch_Approval__c/fields/Is_Recalled__c.field-meta.xml
<CustomField>
    <fullName>Is_Recalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recalled</label>
    <type>Checkbox</type>
</CustomField>