force-app/main/default/objects/Batch_Approval__c/fields/No_of_Advances__c.field-meta.xml
<CustomField>
    <fullName>No_of_Advances__c</fullName>
    <label># of Advances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>