force-app/main/default/objects/Batch_Approval__c/fields/Number_of_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rejected__c</fullName>
    <label>Number of Rejected</label>
    <summaryFilterItems>
        <field>Batch_Approver__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Batch_Approver__c.Batch_Approval__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>