force-app/main/default/objects/Batch_Approval__c/fields/Required_Number_of_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Required_Number_of_Approvers__c</fullName>
    <formula>IF(ISPICKVAL( Approval_Type__c, &apos;Advance Batch Approval&apos;),
$CustomMetadata.Settings__mdt.Universal_Settings.Minimum_Advance_Batch_Approvers__c,
$CustomMetadata.Settings__mdt.Universal_Settings.Minimum_Advance_IC_Approvers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Number of Approvers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>