force-app/main/default/objects/Batch_Approval__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Batch_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>