force-app/main/default/objects/Batch_Approval__c/fields/Total_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Total_Approvers__c</fullName>
    <description>Total number of approvers</description>
    <label>Total Approvers</label>
    <summaryForeignKey>Batch_Approver__c.Batch_Approval__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>