force-app/main/default/objects/Batch_Approval__c/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <label>Total Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>