force-app/main/default/objects/Batch_Approval__c/recordTypes/Batch_Approval.recordType-meta.xml
<RecordType>
    <fullName>Batch_Approval</fullName>
    <active>true</active>
    <label>Batch Approval</label>
</RecordType>