force-app/main/default/objects/Batch_Approval__c/recordTypes/Single_Approval.recordType-meta.xml
<RecordType>
    <fullName>Single_Approval</fullName>
    <active>true</active>
    <label>Single Approval</label>
</RecordType>